--- a/resources/assets/stylesheets/less/variables.less
+++ b/resources/assets/stylesheets/less/variables.less
@@ -27,3 +27,27 @@
 // Design specific
 @bar-bottom-container-height: 40px;
 @header-height: 80px;
+
+:root {
+    --base-color: @base-color;
+    --base-gray: @base-gray;
+    --brand-color-dark: @brand-color-dark;
+    --brand-color-darker: @brand-color-darker;
+    --brand-color-light: @brand-color-light;
+    --brand-color-lighter: @brand-color-lighter;
+    --content-color: @content-color;
+    --dark-gray-color: @dark-gray-color;
+    --light-gray-color: @light-gray-color;
+
+    --active-color: @active-color;
+    --activity-color: @activity-color;
+    --brown: @brown;
+    --dark-green: @dark-green;
+    --dark-violet: @dark-violet;
+    --green: @green;
+    --orange: @orange;
+    --petrol: @petrol;
+    --red: @red;
+    --violet: @violet;
+    --yellow: @yellow;
+}
