--- a/resources/assets/stylesheets/less/admin.less
+++ b/resources/assets/stylesheets/less/admin.less
@@ -34,21 +34,9 @@
     }
 }
 
-table.attribute_table {
+fieldset.attribute_table {
     border-collapse: collapse;
 
-    > tbody > tr > td {
-        border-top: thin solid #aaaaaa;
-        border-bottom: thin solid #aaaaaa;
-        padding-top: 15px;
-        padding-bottom: 15px;
-    }
-    > tbody > tr.sub > td {
-        border-top: none;
-        border-bottom: none;
-        padding-top: 8px;
-        padding-bottom: 8px;
-    }
     ul {
         margin: 0px;
     }
