revert broken merge [48411], fix tree layout, fixes #8844

--- a/resources/assets/stylesheets/less/css_tree.less
+++ b/resources/assets/stylesheets/less/css_tree.less
@@ -55,10 +55,10 @@
         + label {
             .icon('before', 'arr_1right', 'clickable');
             cursor: pointer;
-            vertical-align: text-top;
 
             &:before {
                 .transition(transform @css-tree-delay);
+                vertical-align: baseline;
             }
         }
         ~ ul {
